fixed gap at bottom of page

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,7 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Belgrano);
 
 body {
-  padding: 0px 0 20px 0px;
+  padding: 0px;
   margin: 0px;
   font: 7vh/1.7 "Belgrano", serif;
   color: #fff;
